Added js animation class

--- a/static/templates/buy_thermomix.html
+++ b/static/templates/buy_thermomix.html
@@ -56,12 +56,12 @@
         </div>
     </header>
     <div class="main-container">
-        <section class="buy-thermoxix">
+        <section class="buy-thermoxix js-scroll">
             <div class="card card-top mx-auto">
                 <h1 class="card-title m-3 gowun-batang-regular text-center">How to buy Thermomix</h1>
                 <div class="card-body">
                     <div class="row">
-                        <div class="col-md-6 align-content-center">
+                        <div class="col-md-6 align-content-center js-scroll slide-left">
                             <p class="text-wrap">
                                 Join me and the thousands who have transformed their cooking experience with the
                                 revolutionary Thermomix®. As an authorized Thermomix® advisor, I, Alina, am here to
@@ -86,7 +86,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 js-scroll slide-right">
                             <img src="/static/img/buy-tm6.jpg" class="card-img-top img-design img-fluid"
                                 alt="card image">
                         </div>
@@ -120,8 +120,8 @@
             </div>
         </section>
         <!-- Section how it works -->
-        <section class="how_it_works text-center">
-            <h2 class="m-3">How it Works</h2>
+        <section class="how_it_works text-center js-scroll">
+            <h2>How it Works</h2>
             <div class="row">
                 <div class="col-md-4">
                     <h4>Full Payment</h4>
@@ -150,8 +150,8 @@
             </div>
         </section>
         <!-- Additional benefits -->
-        <section class="how_it_works bg-colour text-center mt-5 mb-5">
-            <h3 class="pt-4">Additional Benefits</h3>
+        <section class="adicional_benefits bg-colour text-center pt-2 js-scroll">
+            <h3>Additional Benefits</h3>
             <div class="row">
                 <div class="col-md-4">
                     <strong>After-Sales Support:</strong> My service doesn’t stop at purchase. As your dedicated
@@ -212,6 +212,11 @@
         </div>
         <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous">
+  </script>
+  <script src="/static/script/script.js"></script>
 </body>
 
 </html>
