--- a/static/templates/contact.html
+++ b/static/templates/contact.html
@@ -55,13 +55,13 @@
       </div>
     </div>
   </header>
-  <div class="main-container">
+  <div class="main-container js-scroll">
     <section class="book-demo">
       <div class="card card-top mx-auto text-center">
         <h1 class="card-title m-3 gowun-batang-regular">Your Thermomix Experience Starts Here </h1>
         <div class="card-body">
           <div class="row">
-            <div class="col-md-6 d-flex">
+            <div class="col-md-6 d-flex js-scroll slide-left">
               <p>
                 If you have any questions or would like to schedule a personalized Thermomix® Cooking Experience, I'd
                 love to
@@ -75,7 +75,7 @@
                 can elevate your kitchen experience!
               </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 js-scroll slide-right">
               <img src="/static/img/tm6-only.jpg" class="img-fluid img-design" alt="buy thermomix">
             </div>
             <div class="container-fluid">
@@ -136,7 +136,9 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  <script src="/static/script/script.js"></script>
 </body>
 
 </html>
