--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -13,35 +13,35 @@
 
 <body>
   <header>
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="/static/img/logo.png" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="demo.html">Book Demo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="/static/img/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="demo.html">Book Demo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="buy_thermomix.html">Buy Thermomix</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    
+      </div>
+    </nav>
+
     <!-- hero image -->
     <div class="hero-container">
       <div class="hero">
@@ -56,70 +56,93 @@
     </div>
   </header>
   <div class="main-container">
-    <div class="container text-center">
-      <section id="what_is_thermomix">
-        <h1 class="m-3 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK Thermomix® Advisor</h1>
-        <div class="row">
-          <div class="col">
-            <img src="/static/img/alina.jpeg" class="img-design img-fluid" alt="Thermomix TM6 Image">
-          </div>
-          <div class="col-md-6 d-flex">
-            <p>
-              The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for home chefs.
-              With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous vide—this
-              versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo® platform,
-              allowing you to create delicious dishes with ease.
-            </p>
-            <p>
-              Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home cooking, the TM6
-              empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
-            <p>
-            <p>
-              Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover how the
-              Thermomix can transform your cooking experience today!
-            </p>
-            <a href="demo.html">
-              <button type="button" class="btn btn-success">Book a Demo</button>
-            </a>
-          </div>
+    <div class="container text-center js-scroll">
+      <div class="card card-top mx-auto">
+        <div class="card-body">
+          <section class="what_is_thermomix ">
+            <h1 class="card-title mb-4 gowun-batang-regular">Discover the Power of Thermomix® with Alina - Official UK
+              Thermomix® Advisor</h1>
+            <div class="row">
+              <div class="col">
+                <img src="/static/img/alina.jpeg" class="img-design img-fluid js-scroll slide-left" alt="Thermomix TM6 Image">
+              </div>
+              <div class="col-md-6 d-flex js-scroll slide-right">
+                <p>
+                  The Thermomix® TM6 is a revolutionary all-in-one kitchen appliance designed to simplify cooking for
+                  home
+                  chefs.
+                  With over 20 cooking functions—including steaming, blending, chopping, kneading, and even cooking sous
+                  vide—this
+                  versatile device makes meal prep effortless. Explore thousands of Thermomix recipes on the Cookidoo®
+                  platform,
+                  allowing you to create delicious dishes with ease.
+                </p>
+                <p>
+                  Whether you're looking to buy Thermomix TM6 or searching for the best kitchen gadgets for home
+                  cooking,
+                  the TM6
+                  empowers you to save time and reduce kitchen clutter while unleashing your culinary creativity.
+                <p>
+                <p>
+                  Join me,<em class="cooking-demo">Your Thermomix Advisor</em> for a cooking demo</span> and discover
+                  how
+                  the
+                  Thermomix can transform your cooking experience today!
+                </p>
+                <a href="demo.html">
+                  <button type="button" class="btn btn-success">Book a Demo</button>
+                </a>
+              </div>
+
+              <!--Section what comes with thermomix  -->
+          </section>
+          <section id="what_comes_with_thermomix">
+            <h2 class="mb-4 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
+            <div class="row">
+              <div class="col-md-6 d-flex js-scroll slide-left">
+                <p>
+                  The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right
+                  to
+                  your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential
+                  accessories.
+                </p>
+                <p>
+                  These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with
+                  lid,
+                  measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook
+                  effortlessly.
+                </p>
+                <p>
+                  It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve
+                  nutrition, and enjoy stress-free meal preparation. <br>
+                  <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
+                <p>
+                  <a href="buy_thermomix.html">
+                    <button type="button" class="btn btn-success">Buy - TM6</button>
+                  </a>
+              </div>
+              <div class="col-md-6 js-scroll slide-right">
+                <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
+              </div>
+          </section>
         </div>
-      </section>
-      <!--Section what comes with thermomix  -->
-      <section id="what_comes_with_thermomix">
-        <h2 class="m-3 gowun-batang-regular">What comes in the Thermomix TM6 Box </h2>
-        <div class="row">
-          <div class="col-md-6 d-flex">
-            <p>
-              The Thermomix® TM6 not only simplifies meal prep but also brings a world of culinary creativity right to your kitchen. It is a an all-in-one solution for your kitchen, equipped with several essential accessories.
-            </p>
-            <p>
-              These include the mixing bowl, varoma steamer, splash guard, butterfly whisk, simmering basket with lid, measuring cup, and spatula. With these tools, you can steam, blend, whisk, sauté, and slow cook effortlessly. 
-            </p>   
-            <p>
-              It's perfect for busy families, professionals, and passionate home cooks seeking to save time, improve nutrition, and enjoy stress-free meal preparation. <br>
-              <em class="cooking-demo">Only available to purchase through a Thermomix® Advisor</em>
-            <p>
-              <a href="buy_thermomix.html">
-                <button type="button" class="btn btn-success">Buy - TM6</button>
-              </a>
-          </div>
-          <div class="col-md-6">
-            <img src="/static/img/tm-6-acessories.png" class="img-design img-fluid" alt="Thermomix TM6 Image">
-            </div>
-        </div>
-      </section>
-    </div>
-    <div class="container-fluid p-0 text-center">
-      <section class="buy_thermomix m-5">
-        <h3 class="m-3 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant! </h3>
-        <p>
-          Unlock the full potential of your kitchen with the ultimate all-in-one solution, Thermomix®. This versatile device transforms your culinary experience, combining multiple kitchen tools into one intelligent assistant. From chopping and blending to precise cooking, Thermomix® streamlines meal prep, allowing you to create wholesome, restaurant-quality dishes effortlessly. Whether you’re exploring new flavors or simplifying everyday meals, it adapts to your needs, saving you time, reducing clutter, and enhancing creativity. Let Thermomix® empower your kitchen, so you can cook smarter, not harder!
+      </div>
+      <section class="buy_thermomix how_it_works js-scroll text-center">
+        <h3 class="mb-4 gowun-batang-regular">Unlock Your Kitchen Full Potential with the Ultimate All-in-One Assistant!
+        </h3>
+        <p class="mb-4">
+          Unlock the full potential of your kitchen with the ultimate all-in-one solution, Thermomix®. This versatile
+          device transforms your culinary experience, combining multiple kitchen tools into one intelligent assistant.
+          From chopping and blending to precise cooking, Thermomix® streamlines meal prep, allowing you to create
+          wholesome, restaurant-quality dishes effortlessly. Whether you’re exploring new flavors or simplifying
+          everyday meals, it adapts to your needs, saving you time, reducing clutter, and enhancing creativity. Let
+          Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-           <video controls class="img-fluid">
-              <source src="/static/video/TM6-video.mp4">
-              Your browser does not support the vide tag.
-           </video>
+          <video controls class="img-fluid">
+            <source src="/static/video/TM6-video.mp4">
+            Your browser does not support the vide tag.
+          </video>
           <div class="buy_thermomix-btn">
             <div>
               <a href="buy_thermomix.html">
@@ -135,35 +158,36 @@
         </div>
       </section>
     </div>
-  </div>
-  
-  <!-- Footer -->
-  <footer class="tex-white mx-auto text-center py-4">
-    <section class="footer">
-      <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
-      <p>
-        I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are ready to buy, feel free to get in touch.
-      </p>
-      <p>
-        Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
-      </p>
-      <div>
-        <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
-          <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
-        </a>
+
+    <!-- Footer -->
+    <footer class="tex-white mx-auto text-center py-4">
+      <section class="footer">
+        <h4 class="m-3">Have Questions? Ready to Book a Demo or Purchase?</h4>
+        <p>
+          I’m here to assist! Whether you’re looking for more information, want to schedule a live cooking demo, or are
+          ready to buy, feel free to get in touch.
+        </p>
+        <p>
+          Simply click the WhatsApp button below, and I’ll be happy to help you on your Thermomix® journey.
+        </p>
+        <div>
+          <a aria-label="Chat on WhatsApp" href="https://wa.me/07939304191" target="_blank">
+            <img alt="Chat on WhatsApp" src="/static/img/WhatsAppButtonWhiteSmall.svg" />
+          </a>
+        </div>
+      </section>
+
+      <div class="footer-links">
+        <a href="demo.html">Book Demo</a> |
+        <a href="buy_thermomix.html">Buy Thermomix</a> |
+        <a href="contact.html">Contact</a>
       </div>
-    </section>
-    
-    <div class="footer-links">
-      <a href="demo.html">Book Demo</a>  |
-      <a href="buy_thermomix.html">Buy Thermomix</a> | 
-      <a href="contact.html">Contact</a>
-    </div>
-    <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+      <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+      </script>
+    <script src="/static/script/script.js"></script>
 </body>
 
 </html>
