--- a/static/templates/demo.html
+++ b/static/templates/demo.html
@@ -53,13 +53,13 @@
       </div>
     </div>
   </header>
-  <div class="main-container">
+  <div class="main-container js-scroll">
     <section class="book-demo">
       <div class="card card-top mx-auto text-center">
         <h1 class="card-title m-3 gowun-batang-regular">Book a Demo</h1>
         <div class="card-body">
           <div class="row">
-            <div class="col-md-6 d-flex">
+            <div class="col-md-6 d-flex js-scroll slide-left">
               <p>
                 <em>Having a <b>Thermomix® Advisor</b> means you’re not just buying a kitchen appliance; you’re
                   gaining
@@ -82,7 +82,7 @@
                 Thermomix can transform your cooking experience today!</p>
               </p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 js-scroll slide-right">
               <img src="/static/img/book-demo.jpeg" class="card-img-top img-design" alt="book a demo image">
             </div>
 
@@ -116,7 +116,7 @@
       </div>
     </section>
     <!-- Section how it works -->
-    <section class="how_it_works text-center">
+    <section class="how_it_works text-center js-scroll">
       <h2 class="m-3">How it Works</h2>
       <div class="row">
         <div class="col-md-4">
@@ -181,6 +181,11 @@
     </div>
     <p>&copy; 2024 Alina's Thermomix Advisor - All rights reserved.</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous">
+  </script>
+  <script src="/static/script/script.js"></script>
 </body>
 
 </html>
