Added id class to handle javascript video loding

--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -139,11 +139,11 @@
           Thermomix® empower your kitchen, so you can cook smarter, not harder!
         </p>
         <div class="buy_thermomix-img">
-          <video controls class="img-fluid">
-            <source src="/static/video/TM6-video.mp4">
-            Your browser does not support the vide tag.
+          <video id="thermomixVideo" controls class="img-fluid" alt="Thermomix TM6 demo video">
+            <source src="/static/video/TM6-video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
           </video>
-          <div class="buy_thermomix-btn">
+          <div id="thermomixButtons" class="buy_thermomix-btn">
             <div>
               <a href="buy_thermomix.html">
                 <button type="button" class="btn btn-success m-3">Buy - TM6</button>
