Added margin to card for small devices

--- a/static/templates/contact.html
+++ b/static/templates/contact.html
@@ -56,7 +56,7 @@
     </div>
   </header>
   <div class="main-container js-scroll">
-    <section class="book-demo">
+    <section class="book-demo contact">
       <div class="card card-top mx-auto text-center">
         <h1 class="card-title m-3 gowun-batang-regular">Your Thermomix Experience Starts Here </h1>
         <div class="card-body">
