Adding width and height to video tag

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,6 +48,11 @@ header .btn-success {
   border-radius: 0px;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+}
+
 /* Navbar  */
 .navbar {
   border-top: 8px solid var(--nav_green);
