--- a/static/css/style.css
+++ b/static/css/style.css
@@ -272,26 +272,26 @@ footer a:hover {
 
 @keyframes slide-in-left {
   0% {
-    -webkit-transform: translateX(-100px);
-    transform: translateX(-100px);
+    -webkit-transform: translate(-100px);
+    transform: translate(-100px);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: translate(0);
+    transform: translate(0);
     opacity: 1;
   }
 }
 
 @keyframes slide-in-right {
   0% {
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
+    -webkit-transform: translate(100px);
+    transform: translate(100px);
     opacity: 0;
   }
   100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
+    -webkit-transform: translate(0);
+    transform: translate(0);
     opacity: 1;
   }
 }
