--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@
 }
 
 section {
-  padding: 0 0 20px ;
+  padding: 0 0 20px;
 }
 
 button a {
@@ -129,8 +129,6 @@ video {
   box-shadow: 4px 5px 20px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
-
-
 
 .cooking-demo {
   color: var(--nav_green);
@@ -265,16 +263,44 @@ footer a:hover {
   transform: translateY(0);
 }
 
+.modal-header h1 {
+  padding-left: 10vw;
+}
+
+.modal img {
+  max-width: 450px;
+  height: 310px;
+}
+
+.modal-small-heading {
+  font-family: "Gowun Batang", serif;
+  font-weight: 500;
+  font-size: 1.1rem;
+  font-style: normal;
+  color: var(--nav_green);
+}
+
+.modal-li-align-left li {
+  text-align: initial;
+}
+
+.modal-flag-btn button {
+  background-color: var(--bg-colour);
+  border: none;
+}
+
 /* key frame Animation */
 .js-scroll {
   opacity: 0;
   transform: translateY(30px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Smooth fade and slide */
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  /* Smooth fade and slide */
 }
 
 .scrolled {
   opacity: 1;
-  transform: translateY(0);    /* Reset position */
+  transform: translateY(0);
+  /* Reset position */
 }
 
 .scrolled.slide-left {
@@ -291,6 +317,7 @@ footer a:hover {
     transform: translate(-100px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translate(0);
     transform: translate(0);
@@ -304,6 +331,7 @@ footer a:hover {
     transform: translate(100px);
     opacity: 0;
   }
+
   100% {
     -webkit-transform: translate(0);
     transform: translate(0);
@@ -314,10 +342,21 @@ footer a:hover {
 /* Media Queries */
 @media (max-width: 768px) {
   .contact {
-    margin-bottom: -120px ;
+    margin-bottom: -120px;
   }
+
   .card-body {
     margin-top: -15px;
+  }
+
+  .col-md-6 {
+    padding-top: 1.5rem;
+  }
+
+  .modal img {
+    max-width: 80vw;
+    min-height: 275px;
+    height: auto;
   }
 }
 
@@ -326,16 +365,19 @@ footer a:hover {
     display: none;
   }
 
+
   /* Min-Height for video about me page */
-.min-Height {
-  min-height: 250px;
-}
+  .min-Height {
+    min-height: 250px;
+  }
 
   @keyframes slide-in-left {
     0% {
-      transform: translate(-30px); /* Adjusted from -100px */
+      transform: translate(-30px);
+      /* Adjusted from -100px */
       opacity: 0;
     }
+
     100% {
       transform: translate(0);
       opacity: 1;
@@ -344,12 +386,14 @@ footer a:hover {
 
   @keyframes slide-in-right {
     0% {
-      transform: translate(30px); /* Adjusted from 100px */
+      transform: translate(30px);
+      /* Adjusted from 100px */
       opacity: 0;
     }
+
     100% {
       transform: translate(0);
       opacity: 1;
     }
   }
- }
+}
