Setting height to modal

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -263,6 +263,12 @@ footer a:hover {
   transform: translateY(0);
 }
 
+.modal {
+  overflow-y: scroll;
+  height: 100%;
+  width: 100%;
+}
+
 .modal-header h1 {
   padding-left: 10vw;
 }
