--- a/static/css/style.css
+++ b/static/css/style.css
@@ -221,15 +221,12 @@ footer a:hover {
   color: var(--nav_green);
 }
 
-/* .card-body {
-  color: #455E63;
-} */
 
 .card-top {
 
   bottom: 15vh;
   border-radius: 50px 50px 5px 5px;
-  text-wrap: balance;
+  /* text-wrap: balance; */
   border: 0;
   background: var(--bg-colour);
   box-shadow: 0px 0px 1px 2px rgba(20, 20, 20, -0.8);
