--- a/static/css/style.css
+++ b/static/css/style.css
@@ -307,6 +307,7 @@ footer a:hover {
   /* Smooth fade and slide */
 }
 
+
 .scrolled {
   opacity: 1;
   transform: translateY(0);
@@ -381,10 +382,9 @@ footer a:hover {
     min-height: 250px;
   }
 
-  @keyframes slide-in-left {
+  /* @keyframes slide-in-left {
     0% {
       transform: translate(-30px);
-      /* Adjusted from -100px */
       opacity: 0;
     }
 
@@ -397,7 +397,6 @@ footer a:hover {
   @keyframes slide-in-right {
     0% {
       transform: translate(30px);
-      /* Adjusted from 100px */
       opacity: 0;
     }
 
@@ -405,5 +404,5 @@ footer a:hover {
       transform: translate(0);
       opacity: 1;
     }
-  }
+  } */
 }
