--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,6 @@
   --bg-colour: #f8f9fa;
 }
 
-
 /* General Styles */
 * {
   box-sizing: border-box;
@@ -44,7 +43,6 @@ body {
   margin: auto;
   padding: 0 15px;
 }
-
 
 video {
   max-width: 100%;
@@ -239,7 +237,6 @@ footer a:hover {
   margin-top: -7rem;
 }
 
-
 /* Section buy_thermomix */
 .after-sale-suport {
   background-color: var(--bg-colour);
@@ -251,17 +248,18 @@ footer a:hover {
 }
 
 .toggle-content {
-  height: 0;
+  max-height: 0;
   overflow: hidden;
   opacity: 0;
-  transform: translateY(-20px);
-  transition: max-height 0.5s ease, opacity 0.5s ease, transform 0.5s ease;
+  transform: translateY(20px);
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+  padding-top: 15px;   /* Padding to prevent jump */
+  margin-bottom: 15px; /* Add margin to keep spacing */
 }
 
 .show-content {
-  height: auto;
+  max-height: 800px;
   opacity: 1;
-  transform: translateY(0);
 }
 
 .modal {
@@ -303,7 +301,6 @@ footer a:hover {
   transition: opacity 0.6s ease-out, transform 0.1s ease-out;
   /* Smooth fade and slide */
 }
-
 
 .scrolled {
   opacity: 1;
@@ -372,7 +369,6 @@ footer a:hover {
   #thermomixButtons {
     display: none;
   }
-
 
   /* Min-Height for video about me page */
   .min-Height {
