--- a/static/css/style.css
+++ b/static/css/style.css
@@ -116,6 +116,20 @@ video {
   padding: 1.2rem;
 }
 
+.hero-heading__thank-you {
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2.5rem;
+    font-family: serif;
+    color: #084d1c;
+    background-color: #f1f1f1b5;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    padding: 1.2rem;
+}
+
 .img-fluid {
   width: 500px;
 }
