Adjusting full width features section on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -502,6 +502,10 @@ p {
     display: none;
   }
 
+  #tm7-features {
+    max-width: 100%;
+  }
+
   /* Min-Height for video about me page */
   .min-Height {
     min-height: 250px;
