--- a/static/css/style.css
+++ b/static/css/style.css
@@ -411,18 +411,26 @@ footer a:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-  text-align: center;
+/* .accordion-button:focus {
+  z-index: 3;
+  outline: 0;
+  box-shadow: none;
+} */
+
+.accordion-button:not(.collapsed) {
+  color: var(--bs-accordion-active-color);
+  background-color: #0d5d2426;
+  box-shadow: inset 0 calc(-1* var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
+
+.accordion-button:focus {
+  background-color: #0d5d2426;
+  box-shadow: none;
 }
 
 h3 {
   margin: 0 0 10px;
   font-size: 1.1em;
-}
-
-p {
-  margin: 0;
-  font-size: 0.9em;
 }
 
 
