--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,10 @@ body {
   color: #455E63;
 }
 
+.index-page .modal-backdrop {
+  z-index: 0 !important;
+}
+
 .main-container {
   max-width: 1320px;
   margin: auto;
@@ -99,7 +103,7 @@ video {
 
 .navbar-collapse {
   margin-top: 1.4rem;
-  
+
 }
 
 /* Hero */
@@ -282,17 +286,14 @@ footer a:hover {
   margin-bottom: 2rem;
 }
 
-/* .toggle-content {
+.toggle-content {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
   transform: translateY(20px);
-  transition: max-height 0.5s ease, opacity 0.5s ease;
-  padding-top: 15px; */
-  /* Padding to prevent jump */
-  /* margin-bottom: 15px; */
-  /* Add margin to keep spacing */
-/* } */
+  transition: max-height 0.9s ease, opacity 0.9s ease;
+  padding-top: 15px;
+}
 
 .show-content {
   max-height: 800px;
@@ -340,7 +341,7 @@ footer a:hover {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: 1000;
@@ -533,6 +534,6 @@ h3 {
 
   .features-container {
     grid-template-columns: none;
-    
+
   }
 }
