--- a/static/css/style.css
+++ b/static/css/style.css
@@ -345,6 +345,7 @@ footer a:hover {
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  overflow: scroll;
 }
 
 
@@ -352,17 +353,31 @@ footer a:hover {
 /* Popup content */
 .popup-content {
   background: white;
-  padding: 20px;
+  padding: 5px;
   border-radius: 10px;
   position: relative;
   text-align: center;
-  max-width: 90%;
-  width: 500px;
+  width: fit-content;
+  height: auto;
 }
 
 .popup-content img {
-  max-width: 100%;
-  border-radius: 10px;
+  /* width: 100%; */
+  /* object-fit: fit; */
+}
+
+/* CTA Button */
+.popup-cta {
+  display: block;
+  margin: 15px auto;
+  padding: 10px 20px;
+  background: #146c43;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  width: 50%;
+  position: relative;
 }
 
 /* Close button */
@@ -383,17 +398,7 @@ footer a:hover {
   justify-content: center;
 }
 
-/* CTA Button */
-.popup-cta {
-  display: inline-block;
-  margin-top: 15px;
-  padding: 10px 20px;
-  background: #146c43;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
-}
+
 
 /* end of tm7 pop up */
 
@@ -488,15 +493,12 @@ h3 {
 }
 
 /* Media Queries */
-
 @media screen and (max-width: 992px) {
   .navbar ul li a {
     color: #ffffff;
     font-weight: 600;
   }
 }
-
-
 
 @media (max-width: 768px) {
   .contact {
@@ -518,7 +520,36 @@ h3 {
   }
 }
 
+@media only screen 
+  and (min-width: 375px)
+  and (max-width: 667) 
+  and (orientation: landscape)
+  {
+  .popup-content {
+    width: fit-content;
+    height: 98vh;
+  }
+
+  .popup-content img {
+    height: 80vh;
+  }
+
+  .popup-cta {
+    width: 65%;
+  }
+}
+
+
 @media (max-width: 576px) {
+
+  .popup-content  {
+    width: 90%;
+  } 
+
+  .popup-content img {
+    width: 100%;
+  }
+
   #thermomixButtons {
     display: none;
   }
@@ -534,6 +565,5 @@ h3 {
 
   .features-container {
     grid-template-columns: none;
-
   }
 }
